--- a/FinCalcIn3/app/src/main/AndroidManifest.xml
+++ b/FinCalcIn3/app/src/main/AndroidManifest.xml
@@ -18,6 +18,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".Results" />
+        <activity android:name=".Payment" />
+        <activity android:name=".PaymentResults" />
+
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
