--- a/FinCalcIn3/app/src/main/AndroidManifest.xml
+++ b/FinCalcIn3/app/src/main/AndroidManifest.xml
@@ -10,7 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.FinCalcIn">
         <activity android:name=".MainActivity"
-            android:exported="true">
+            android:exported="true"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait">
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -18,10 +20,18 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Results" />
-        <activity android:name=".Payment" />
-        <activity android:name=".PaymentResults" />
-        <activity android:name=".PresResults" />
+        <activity android:name=".Results"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".Payment"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait" />
+        <activity android:name=".PaymentResults"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".PresResults"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"/>
 
         <meta-data
             android:name="preloaded_fonts"
